# qler

./: .gitignore  BRAINSTORM.md  CHANGELOG.md  CLAUDE.md  NORTH_STAR.md  README.md  ROADMAP.md  SPEC.md  SQLER_GAPS.md  TEMPLATE_USAGE.md  agents.md  pyproject.toml
.claude/commands/: README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pypi.yml
adoption/: CHECKLIST.md
benchmarks/: COMPARISON.md  __init__.py  __main__.py  celery_app.py  celery_harness.py  compare.py
benchmarks/core/: __init__.py  base.py  config.py  hygiene.py  runner.py  system.py  timer.py
benchmarks/generators/: __init__.py  payloads.py
benchmarks/suites/: __init__.py  suite_claim.py  suite_comparison.py  suite_enqueue.py  suite_lifecycle.py
docs/: testing-fastapi.md  testing-hypothesis.md  testing-mcp.md  testing-nodejs.md  testing-playwright.md  testing-static-analysis.md  testing.md
docs/doctrine/: README.md  ci.md  design.md  git.md  handoff.md  nodejs.md  security.md  style.md
docs/quick-reference/: agents-quick-ref.md  doctrine-index.md  git-quick-ref.md  security-quick-ref.md  testing-fastapi-quick-ref.md  testing-hypothesis-quick-ref.md  testing-playwright-quick-ref.md  testing-quick-ref.md
examples/: README.md
global/.claude/: CLAUDE.md  (+1 more)
specs/: M9-cron-catchup.md  performance-upgrades.md
tests/: conftest.py  test_archival.py  test_batch_claim.py  test_cancellation.py  test_cli.py  test_context.py  test_cron.py  test_dep_index.py  test_dependencies.py  test_dlq.py  test_immediate.py  test_lease.py  test_lifecycle.py  test_lifecycle_events.py  test_metrics.py  test_models.py  test_notify.py  test_pool_health.py  test_progress.py  test_queue.py  test_rate_limit.py  test_scaffold.py  test_task.py  test_unique.py  test_worker.py
(+87 files in other folders)
