[project]
name = "qler"
version = "0.2.0"
description = "Async-first background job queue for Python, built on SQLite via sqler"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [{name = "gabu"}]
keywords = ["sqlite", "job-queue", "async", "background-tasks", "sqler"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = [
    "sqler>=1.2026.2.1",
    "python-ulid>=3.0.0",
    "click>=8.0.0",
    "croniter>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/gabu/qler"
Repository = "https://github.com/gabu/qler"
Issues = "https://github.com/gabu/qler/issues"

[project.optional-dependencies]
logler = ["logler>=1.3.0"]

[project.scripts]
qler = "qler.cli:cli"

[dependency-groups]
dev = [
    "pydantic>=2.12.5",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff==0.12.10",
]

[tool.uv.sources]
sqler = { path = "../sqler", editable = true }

[build-system]
requires = ["uv_build>=0.7.19,<0.8.0"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src/qler"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "N",
]
ignore = [
    "E501",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["N", "E501", "F841"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.pytest.ini_options]
asyncio_mode = "auto"
